--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <script src="scripts.js"></script>
     <title>DJS06</title>
     <style>
-        body, html {
-            height: 100%;
+        body {
+            height: 100vh;
             margin: 0;
             display: flex;
             justify-content: center;
@@ -25,6 +25,8 @@
             font-size: 24px;
             font-weight: bold;
             color: #333;
+            width: auto;
+            height: auto;
         }
     </style>
 </head>
